--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+alembic==1.4.2
 async-generator==1.10
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.3
 certifi==2019.11.28
 chardet==3.0.4
+dataset==1.3.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -27,10 +29,12 @@ jupyterlab==2.0.1
 jupyterlab-heroku==0.2.1
 jupyterlab-pygments==0.1.0
 jupyterlab-server==1.0.7
+Mako==1.1.2
 MarkupSafe==1.1.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.4
+networkx==2.4
 notebook==6.0.3
 numpy==1.18.2
 oauthlib==3.1.0
@@ -46,6 +50,7 @@ Pygments==2.6.1
 pyrsistent==0.16.0
 PySocks==1.7.1
 python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
 pyzmq==19.0.0
 qtconsole==4.7.2
@@ -56,6 +61,7 @@ scikit-learn==0.22.2.post1
 scipy==1.4.1
 Send2Trash==1.5.0
 six==1.14.0
+SQLAlchemy==1.3.15
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
